# maitreyakv.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  main.css  tailwind.config.js  tailwind.css  tw-animate.css
.github/workflows/: deploy.yml
resume/: Makefile  main.tex
site/: Cargo.toml  index.html  main.css  style.css  tailwind.css
site/src/: main.rs
src/: atoms.rs  lib.rs  main.rs  molecules.rs  organisms.rs  starscape.rs  style.css  utils.rs
src/components/: atoms.rs  mod.rs  molecules.rs  typer.rs
src/pages/: about.rs  about_text.html  career.rs  home.rs  mod.rs  not_found.rs  projects.rs  python_text.html  skills.rs
