[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
derive_builder = "0.20.2"
getrandom = { version = "0.3", features = [ "wasm_js" ] }
gloo = { version = "0.11.0", features = [ "events" ] }
rand = "0.9.2"
sycamore = "0.9.1"
sycamore-router = "0.9.1"
web-sys = { version = "0.3.77", features = [ "CssStyleDeclaration", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "WindowClient" ] }
